--- a/AIFoodApp/app/src/main/res/report/layout/weekly_report_fragment_2.xml
+++ b/AIFoodApp/app/src/main/res/report/layout/weekly_report_fragment_2.xml
@@ -32,24 +32,26 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
 
         <FrameLayout
             android:id="@+id/carbohydrateBorder"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="left"
             android:background="@drawable/circle_round">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -58,6 +60,7 @@
                     android:layout_height="wrap_content"
                     android:text="탄수화물"
                     android:textAlignment="center"
+                    android:textSize="13dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -66,6 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="적정"
+                    android:textSize="16dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -74,14 +78,17 @@
 
         <FrameLayout
             android:id="@+id/proteinBorder"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:background="@drawable/circle_round">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -91,6 +98,7 @@
                     android:layout_height="wrap_content"
                     android:text="단백질"
                     android:textAlignment="center"
+                    android:textSize="13dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -99,6 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="적정"
+                    android:textSize="16dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -106,16 +115,15 @@
 
         <FrameLayout
             android:id="@+id/fatBorder"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="right"
             android:background="@drawable/circle_round">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -124,6 +132,7 @@
                     android:layout_height="wrap_content"
                     android:text="지방"
                     android:textAlignment="center"
+                    android:textSize="13dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -132,6 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="적정"
+                    android:textSize="16dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
