음식 추천 페이지 : 캐릭터 이미지 교체

--- a/AIFoodApp/app/src/main/res/recommend/layout/activity_recommend_food.xml
+++ b/AIFoodApp/app/src/main/res/recommend/layout/activity_recommend_food.xml
@@ -78,7 +78,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center_vertical"
-                    app:srcCompat="@drawable/icon" />
+                    app:srcCompat="@drawable/heart" />
 
             </LinearLayout>
 
