--- a/AIFoodApp/app/src/main/res/main/layout/activity_main.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_main.xml
@@ -34,7 +34,9 @@ tools:context=".activity.MainActivity">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:text="주간통계" />
+                android:drawableLeft="@drawable/alarm_icon"
+                android:text="주간통계"
+                android:textColor="#FFFFFF" />
 
             <View
                 android:id="@+id/view"
