--- a/AIFoodApp/app/src/main/res/common/layout/food_list_item4.xml
+++ b/AIFoodApp/app/src/main/res/common/layout/food_list_item4.xml
@@ -2,34 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/border"
-    android:backgroundTint="#F1EEEE"
     android:orientation="vertical">
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_food_order"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_rect_button"
+            android:backgroundTint="#D3E8BB"
+            android:gravity="center"
+            android:padding="3dp"
+            android:text="1"
+            android:textSize="15dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_search2"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#F1EEEE"
-                android:textAlignment="center"
                 android:gravity="center"
-                android:padding="7dp"
-                android:text="음식이름"
-                android:textSize="15sp" />
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_show_food_img"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/meal_icon"
+                    app:civ_border_color="#fff"
+                    app:civ_border_overlay="true"
+                    app:civ_border_width="3dp" />
+                <!--android:src="@drawable/ic_launcher_background"-->
+
+                <TextView
+                    android:id="@+id/tv_search2"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="bottom|center"
+                    android:layout_weight="1"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:text="음식 이름 표시"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
-
-
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
