--- a/AIFoodApp/app/src/main/res/report/layout/layout_report_day_sub_item.xml
+++ b/AIFoodApp/app/src/main/res/report/layout/layout_report_day_sub_item.xml
@@ -32,15 +32,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:text="50"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_sub_item_kcal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="kcal"
+                    android:text="50"
                     android:textStyle="bold" />
+
 
             </LinearLayout>
         </LinearLayout>
