--- a/AIFoodApp/app/src/main/res/main/layout/food_list_item2.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/food_list_item2.xml
@@ -50,6 +50,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
+                            android:gravity="center"
                             android:maxLines="2"
                             android:text="음식 이름 표시" />
 
