상세 영양 액티비티 : 음식명 길어지는 경우 레이아웃 겹치는 이슈 해결 및 뒤로가기 버튼 추가

--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_detail_info.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_detail_info.xml
@@ -13,12 +13,22 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/btn_back_detail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/back_arrow_icon" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/magnifier" />
+            android:src="@drawable/magnifier"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/textView"
@@ -50,7 +60,11 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@drawable/round_rect_button"
-            android:backgroundTint="#3A531C">
+            android:backgroundTint="#3A531C"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/tv_foodDetailInfoName"
@@ -63,7 +77,10 @@
                 android:text="음식 이름"
                 android:textAlignment="center"
                 android:textColor="#fff"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:ems="5"
+                android:maxLines="1"
+                android:ellipsize="end" />
 
             <TextView
                 android:id="@+id/textView17"
