--- a/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
@@ -10,8 +10,17 @@
         android:layout_height="60dp"
         android:background="#80B542"
         android:gravity="right|center_vertical"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="10dp">
+
+        <ImageButton
+            android:id="@+id/btn_back_detail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/back_arrow_icon" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -143,7 +152,7 @@
         <ImageView
             android:id="@+id/loginFlag"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:layout_weight="2"
             app:srcCompat="@drawable/google_login" />
