--- a/AIFoodApp/app/src/main/res/common/layout/activity_food_input.xml
+++ b/AIFoodApp/app/src/main/res/common/layout/activity_food_input.xml
@@ -12,9 +12,17 @@
         android:layout_height="60dp"
         android:background="#80B542"
         android:gravity="right|center_vertical"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="10dp">
 
+        <ImageButton
+            android:id="@+id/btn_back_detail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/back_arrow_icon" />
 
         <LinearLayout
             android:layout_width="match_parent"
