--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
@@ -60,13 +60,13 @@
                     android:id="@+id/iv_foodAnalysis"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#a5e35b" />
+                    android:background="#D5E4C2" />
 
                 <TextView
                     android:id="@+id/tv_foodName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center|center"
+                    android:layout_gravity="center|center_horizontal"
                     android:gravity="center"
                     android:text="음식을 추가해주세요"
                     android:textSize="30sp"
